--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "build": "tsc"
+    "start": "node dist/index.js",
+    "build": "tsc",
+    "lint": "eslint src/**/*.{ts,js} --fix",
+    "format": "prettier --write 'src/**/*.{ts,js,json,md}'"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "body-parser": "^1.20.2",
+    "chalk": "^4.1.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
   },
@@ -16,6 +21,12 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint": "^9.25.0",
+    "prettier": "^3.5.3",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1"
   }
 }
