--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 \"src/public/**/*\" dist",
     "lint": "eslint src/**/*.{ts,js} --fix",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
     "test": "jest --passWithNoTests"
@@ -25,6 +25,7 @@
     "@types/jest": "^29.5.14",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
