--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/index.js",
     "build": "tsc && copyfiles -u 1 \"src/public/**/*\" dist",
     "lint": "eslint src/**/*.{ts,js} --fix",
+    "format:check": "prettier --check 'src/**/*.{ts,js,json,md}'",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
     "test": "jest --passWithNoTests"
   },
