--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "tsup --watch",
     "start": "node dist/index.js",
-    "build": "tsc && copyfiles -u 1 \"src/public/**/*\" dist",
+    "build": "tsup && copyfiles -u 1 \"src/public/**/*\" dist",
     "lint": "eslint src/**/*.{ts,js} --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,md}'",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
@@ -34,6 +34,8 @@
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.4.0",
     "typescript": "^5.3.3"
   }
 }
