--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsup --watch",
+    "dev": "ts-node -r tsconfig-paths/register src/index.ts",
+    "watch": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
     "build": "tsup && copyfiles -u 1 \"src/public/**/*\" dist",
     "lint": "eslint src/**/*.{ts,js} --fix",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
