--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
+    "@types/form-data": "^2.5.2",
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "chalk": "^4.1.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0"
+    "express-rate-limit": "^7.5.0",
+    "form-data": "^4.0.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
