--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "copyfiles": "^2.4.1",
