--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
     "paths": {
       "@/*": ["src/*"],
       "@/package.json": ["package.json"]
-    }
+    },
+    "types": ["jest", "node"]
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"]
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
