--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "form-data": "^4.0.2",
+    "multer": "1.4.5-lts.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
