--- a/package.json
+++ b/package.json
@@ -13,37 +13,35 @@
     "test": "jest --passWithNoTests"
   },
   "dependencies": {
-    "@types/form-data": "^2.5.2",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "chalk": "^4.1.2",
-    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "form-data": "^4.0.2",
-    "multer": "1.4.5-lts.2",
+    "form-data": "^4.0.3",
+    "multer": "2.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.15.18",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
+    "@types/node": "^22.15.30",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-prettier": "^5.4.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "ts-jest": "^29.3.3",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.4.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.8.3"
   }
 }
