--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint src/**/*.{ts,js} --fix",
     "format:check": "prettier --check 'src/**/*.{ts,js,json,md}'",
     "format": "prettier --write 'src/**/*.{ts,js,json,md}'",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.11.0",
