--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,41 @@
 version: 2
 updates:
+  # NPM dependencies
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
       interval: 'weekly'
+      day: 'monday'
+      time: '09:00'
     open-pull-requests-limit: 10
+    labels:
+      - 'dependencies'
+      - 'automated'
+    commit-message:
+      prefix: 'chore(deps)'
+      include: 'scope'
     ignore:
       # Chalk v5+ is ESM-only and breaks Jest tests
       - dependency-name: "chalk"
         versions: [">=5.0.0"]
+      # Ignore major version updates for critical dependencies
+      - dependency-name: 'axios'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'typescript'
+        update-types: ['version-update:semver-major']
+
+  # GitHub Actions
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+      interval: 'monthly'
+      day: 'monday'
+      time: '09:00'
+    open-pull-requests-limit: 5
+    labels:
+      - 'ci'
+      - 'dependencies'
+      - 'automated'
+    commit-message:
+      prefix: 'ci(deps)'
+      include: 'scope'
